--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,31 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.11"
-    - name: Install Python packages
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install .[test]
-    - name: Lint
-      run: |
-        pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test
-      run: |
-        python setup.py test
-
   deploy:
-    needs: test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -55,7 +31,7 @@ jobs:
     - name: Publish to PyPi
       if: steps.semantic.outputs.new_release_published == 'true'
       env:
-        PYPI_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        PYPI_USERNAME: ${{ secrets.BLHMSDBMI_PYPI_USERNAME }}
+        PYPI_PASSWORD: ${{ secrets.BLHMSDBMI_PYPI_PASSWORD }}
       run: |
         twine upload --non-interactive -u "${PYPI_USERNAME}" -p "${PYPI_PASSWORD}" dist/*
