chore(ci): Added Twine as a build dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dev = [
 ]
 
 [build-system]
-requires = ["setuptools>=75.8.0", "wheel"]
+requires = ["setuptools>=75.8.0", "wheel", "twine"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
